Fix error on iOS

--- a/styles.css
+++ b/styles.css
@@ -12,35 +12,3 @@ body {
     height: 100vh;
     object-fit: cover;
   }
-
-  .swiper-container {
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .swiper-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    overflow: hidden;
-  }
-  
-  .swiper-slide img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    cursor: pointer;
-    transition: transform 0.3s;
-  }
-  
-  .swiper-slide img:hover {
-    transform: scale(1.05);
-  }
-  
-  @media (max-width: 768px) {
-    .swiper-container {
-      height: 80vh;
-    }
-  }
-  
